--- a/src/frontend/styles/App.css
+++ b/src/frontend/styles/App.css
@@ -4,6 +4,18 @@
 
 .outer-frame {
   
+  width: fit-content; 
+  margin: auto;
+  margin-top: 50px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.inner-frame {
+  box-shadow: -5px 5px 10px #bae5fb; 
+  border-radius: 25px;
 }
 
 .headline {
